[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/Level_Selection.gd" type="Script" id=1]
[ext_resource path="res://Font/Medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/Level_Icons/Level_Button_1.png" type="Texture" id=3]
[ext_resource path="res://Font/Large.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprites/Level_Icons/Level_Button_0.png" type="Texture" id=5]
[ext_resource path="res://sprites/Level_Icons/Level_Button_2.png" type="Texture" id=6]
[ext_resource path="res://sprites/Level_Icons/Level_Button_3.png" type="Texture" id=7]

[node name="Level_Selection" type="Node"]
script = ExtResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_right = 181.0
margin_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 9.0
margin_top = 10.0
margin_right = 172.0
margin_bottom = 72.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer2/VBoxContainer"]
margin_right = 163.0
margin_bottom = 62.0

[node name="Button_Exit" type="Button" parent="CenterContainer2/VBoxContainer/HBoxContainer"]
margin_right = 163.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "< Back"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -360.0
margin_right = 154.0
margin_bottom = 360.0

[node name="levels_Array" type="VBoxContainer" parent="CenterContainer"]
margin_top = 104.0
margin_right = 308.0
margin_bottom = 616.0

[node name="Levels_Title" type="Label" parent="CenterContainer/levels_Array"]
margin_right = 308.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 4 )
text = "Levels"
align = 1
valign = 1

[node name="Level_0" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 116.0
margin_right = 308.0
margin_bottom = 206.0
alignment = 1

[node name="TextureRect_0" type="TextureRect" parent="CenterContainer/levels_Array/Level_0"]
margin_left = 1.0
margin_right = 91.0
margin_bottom = 90.0
texture = ExtResource( 5 )

[node name="Button_0" type="Button" parent="CenterContainer/levels_Array/Level_0"]
margin_left = 95.0
margin_right = 307.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Level 0>"
flat = true

[node name="Level_1" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 210.0
margin_right = 308.0
margin_bottom = 300.0

[node name="TextureRect_1" type="TextureRect" parent="CenterContainer/levels_Array/Level_1"]
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="Button_1" type="Button" parent="CenterContainer/levels_Array/Level_1"]
margin_left = 94.0
margin_right = 306.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Level 1>"
flat = true

[node name="Level_2" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 304.0
margin_right = 308.0
margin_bottom = 394.0

[node name="TextureRect_2" type="TextureRect" parent="CenterContainer/levels_Array/Level_2"]
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 6 )

[node name="Button_2" type="Button" parent="CenterContainer/levels_Array/Level_2"]
margin_left = 94.0
margin_right = 306.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Level 2>"
flat = true

[node name="Level_3" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 398.0
margin_right = 308.0
margin_bottom = 488.0

[node name="TextureRect_3" type="TextureRect" parent="CenterContainer/levels_Array/Level_3"]
margin_right = 90.0
margin_bottom = 90.0
texture = ExtResource( 7 )

[node name="Button_3" type="Button" parent="CenterContainer/levels_Array/Level_3"]
margin_left = 94.0
margin_right = 306.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Level 3>"
flat = true

[node name="Level_4" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 492.0
margin_right = 308.0
margin_bottom = 492.0

[node name="Level_5" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 496.0
margin_right = 308.0
margin_bottom = 496.0

[node name="Level_6" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 500.0
margin_right = 308.0
margin_bottom = 500.0

[node name="Level_7" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 504.0
margin_right = 308.0
margin_bottom = 504.0

[node name="Level_8" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 508.0
margin_right = 308.0
margin_bottom = 508.0

[node name="Level_9" type="HBoxContainer" parent="CenterContainer/levels_Array"]
margin_top = 512.0
margin_right = 308.0
margin_bottom = 512.0

[connection signal="pressed" from="CenterContainer2/VBoxContainer/HBoxContainer/Button_Exit" to="." method="_on_Button_Exit_pressed"]
[connection signal="pressed" from="CenterContainer/levels_Array/Level_0/Button_0" to="." method="_on_Button_0_pressed"]
[connection signal="pressed" from="CenterContainer/levels_Array/Level_1/Button_1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="CenterContainer/levels_Array/Level_2/Button_2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="CenterContainer/levels_Array/Level_3/Button_3" to="." method="_on_Button_3_pressed"]
